[gd_scene load_steps=8 format=2]

[ext_resource path="res://Ball.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Game_scene.gd" type="Script" id=3]
[ext_resource path="res://UI.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 30 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 300, 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2, 145 )

[node name="Game_scene" type="Node"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 513.0
margin_bottom = 301.0
color = Color( 0.333333, 0.137255, 0.137255, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Player 2" type="KinematicBody2D" parent="."]
position = Vector2( 492, 150 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
up = "Player 2 up"
down = "Player 2 down"

[node name="ColorRect" type="ColorRect" parent="Player 2"]
margin_left = -4.0
margin_top = -30.0
margin_right = 4.0
margin_bottom = 30.0
color = Color( 0.556863, 0.658824, 0.352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player 2"]
shape = SubResource( 1 )

[node name="Player 1" type="KinematicBody2D" parent="."]
position = Vector2( 20, 150 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
up = "Player 1 up"
down = "Player 1 down"

[node name="ColorRect" type="ColorRect" parent="Player 1"]
margin_left = -4.0
margin_top = -30.0
margin_right = 4.0
margin_bottom = 30.0
color = Color( 0.737255, 0.223529, 0.764706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player 1"]
shape = SubResource( 1 )

[node name="Ball" parent="." instance=ExtResource( 1 )]
position = Vector2( 256, 150 )

[node name="Center" type="Position2D" parent="."]
position = Vector2( 256, 150 )

[node name="Walls" type="Area2D" parent="."]
position = Vector2( 256, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls"]
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls"]
position = Vector2( 0, 300 )
shape = SubResource( 2 )

[node name="Goal 1" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal 1"]
position = Vector2( 0, 151 )
shape = SubResource( 3 )

[node name="Goal 2" type="Area2D" parent="."]
position = Vector2( 512, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal 2"]
position = Vector2( 0, 151 )
shape = SubResource( 3 )

[node name="UI" parent="." instance=ExtResource( 4 )]

[node name="Timer_restart" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Ball" to="." method="_on_Ball_body_entered"]
[connection signal="area_entered" from="Walls" to="." method="_on_Walls_area_entered"]
[connection signal="area_entered" from="Goal 1" to="." method="_on_Goal_1_area_entered"]
[connection signal="area_entered" from="Goal 2" to="." method="_on_Goal_2_area_entered"]
[connection signal="timeout" from="Timer_restart" to="." method="_on_Timer_restart_timeout"]
